tijo-bmi, podzial projektu na moduly (kolejna iteracja)