@@ -1,55 +1,34 @@
-package com.example.bmimanager.service;
+package com.example.bmimanager.bmi.domain;
 
-import com.example.bmimanager.entity.BmiUser;
-import com.example.bmimanager.entity.WeightRecord;
-import com.example.bmimanager.model.BMICategory;
 import org.springframework.data.domain.Page;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDate;
 import java.util.List;
 
-/**
- * BMIFacadeService - Pattern Fasada
- * Agreguje logikę biznesową związaną z BMI
- * Ukrywa złożoność poszczególnych serwisów
- */
 @Service
-public class BMIFacadeService {
+public class BmiFacade {
 
     private final UserService userService;
     private final WeightService weightService;
 
-    public BMIFacadeService(UserService userService, WeightService weightService) {
+    public BmiFacade(UserService userService, WeightService weightService) {
         this.userService = userService;
         this.weightService = weightService;
     }
 
-    /**
-     * Rejestruje nowego użytkownika tylko z loginem i hasłem
-     */
     public BmiUser registerUser(String username, String password) {
         return userService.registerUser(username, password);
     }
 
-    /**
-     * Zwraca aktualny BMI użytkownika
-     */
     public Double getUserCurrentBMI(Long userId) {
         BmiUser bmiUser = userService.getUserById(userId);
-        if (bmiUser == null)
-            return null;
-        return weightService.getCurrentBMI(bmiUser);
+        return bmiUser != null ? weightService.getCurrentBMI(bmiUser) : null;
     }
 
-    /**
-     * Zwraca historię wag wraz z obliczonym BMI
-     */
     public List<WeightRecord> getUserWeightHistory(Long userId) {
         BmiUser bmiUser = userService.getUserById(userId);
-        if (bmiUser == null)
-            return List.of();
-        return weightService.getUserWeightRecords(bmiUser);
+        return bmiUser != null ? weightService.getUserWeightRecords(bmiUser) : List.of();
     }
 
     public Page<WeightRecord> getPaginatedUserWeightHistory(Long userId, int page, int size) {
@@ -57,36 +36,24 @@ public class BMIFacadeService {
         return bmiUser != null ? weightService.getPaginatedUserWeightRecords(bmiUser, page, size) : Page.empty();
     }
 
-    /**
-     * Dodaje nowy zapis wagi
-     */
     public WeightRecord recordWeight(Long userId, Double weight) {
         BmiUser user = userService.getUserById(userId);
-        if (user == null) {
+        if (user == null)
             throw new IllegalArgumentException("Użytkownik nie znaleziony");
-        }
         return weightService.addWeightRecord(user, weight);
     }
 
-    /**
-     * Dodaje nowy zapis wagi z datą
-     */
     public WeightRecord recordWeight(Long userId, Double weight, LocalDate recordDate) {
         BmiUser user = userService.getUserById(userId);
-        if (user == null) {
+        if (user == null)
             throw new IllegalArgumentException("Użytkownik nie znaleziony");
-        }
         return weightService.addWeightRecord(user, weight, recordDate);
     }
 
-    /**
-     * Zwraca statystyki BMI
-     */
     public BMIStatistics getBMIStatistics(Long userId) {
         BmiUser user = userService.getUserById(userId);
-        if (user == null) {
+        if (user == null)
             return BMIStatistics.empty();
-        }
 
         Double currentWeight = weightService.getCurrentWeight(user);
         Double currentBMI = weightService.getCurrentBMI(user);
@@ -94,7 +61,7 @@ public class BMIFacadeService {
         Double highestWeight = weightService.getHighestWeight(user);
 
         List<WeightRecord> records = weightService.getUserWeightRecords(user);
-        WeightRecord latestRecord = records.isEmpty() ? null : records.getLast();
+        WeightRecord latestRecord = records.isEmpty() ? null : records.get(records.size() - 1);
 
         return new BMIStatistics(
                 currentWeight,
@@ -106,9 +73,6 @@ public class BMIFacadeService {
                 latestRecord);
     }
 
-    /**
-     * Zwraca kategorie BMI
-     */
     public BMICategory getBMICategory(Double bmi) {
         if (bmi == null || bmi == 0)
             return BMICategory.NO_DATA;
@@ -121,24 +85,15 @@ public class BMIFacadeService {
         return BMICategory.OBESITY;
     }
 
-    /**
-     * Aktualizuje profil użytkownika
-     */
     public BmiUser updateUserProfile(Long userId, String firstName, String lastName, Double height,
             Boolean isPublic, String motivationalQuote, String achievement) {
         return userService.updateUser(userId, firstName, lastName, height, isPublic, motivationalQuote, achievement);
     }
 
-    /**
-     * Zwraca publiczne profile
-     */
     public List<BmiUser> getPublicProfiles() {
         return userService.getPublicProfiles();
     }
 
-    /**
-     * Usuwa zapis wagi
-     */
     public void deleteWeightRecord(Long userId, Long recordId) {
         WeightRecord record = weightService.getWeightRecordById(recordId);
         if (record != null && record.getBmiUser().getId().equals(userId)) {
@@ -146,9 +101,6 @@ public class BMIFacadeService {
         }
     }
 
-    /**
-     * Aktualizuje zapis wagi (tylko wagę, bez zmiany daty)
-     */
     public WeightRecord updateWeightRecord(Long userId, Long recordId, Double weight) {
         WeightRecord record = weightService.getWeightRecordById(recordId);
         if (record != null && record.getBmiUser().getId().equals(userId)) {
@@ -157,9 +109,6 @@ public class BMIFacadeService {
         return null;
     }
 
-    /**
-     * Pomocna klasa do przechowywania statystyk BMI
-     */
     public static class BMIStatistics {
         private final Double currentWeight;
         private final Double currentBMI;
